--- a/Develop/index.html
+++ b/Develop/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--Worked on assignment with Austin Ruhf, Kiara Ferguson, Jason Gibson, Gabe Reickart-->
 <html lang="en-us">
 <head>
     <meta charset="UTF-8" />
@@ -48,25 +49,23 @@
             </p>
         </section>
     </article>
-    <!-- Aside-->
+    <!-- Side Bar-->
     <article class="benefits">
-        <aside class="benefit-lead">
+        <aside class="benefits-content">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt=" "/>
+            <img src="./assets/images/lead-generation.png" alt=" ">
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </aside>
-        <aside class="benefit-brand">
+            <br><br>
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt=" "/>
+            <img src="./assets/images/brand-awareness.png" alt=" ">
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </aside>
-        <aside class="benefit-cost">
+            <br>
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt=" "></img>
+            <img src="./assets/images/cost-management.png" alt=" ">
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
